# rsoderh-raytracing

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
assets/: house.blend
assets/scenes/: default.toml  house.toml
src/: app.rs  asset.rs  bvh.rs  camera.rs  cli.rs  environments.rs  hdr.rs  lib.rs  main.rs  mesh.rs  scene.rs  shader.rs  state.rs  texture.rs  vertex.rs
src/shaders/: equirectangular_to_cube.wgsl  hdr.wgsl  shader.wgsl
