[package]
name = "rsoderh-raytracing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.4"
bytemuck = "1.24.0"
cgmath = "0.18"

[lib]
crate-type = ["cdylib", "rlib"]
