[package]
name = "rsoderh-raytracing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.4"
bytemuck = "1.24.0"
cgmath = "0.18"
encase = "0.12.0"
glam = { version = "0.30.9", features = ["encase", "bytemuck"] }
ordered-float = "5.1.0"
wavefront_obj = "11.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enables loading the shader source at runtime from the file system. Useful when
# debugging to avoid rust recompilation when only the shaders are being changed.
# Requires your working directory when running the program to be at the
# workspace root.
runtime-asset-src = []
